[package]
name = "challenge1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3", default-features = false }
clap = { version = "2.34.0", default-features = false }
env_logger = "0.9.0"
log = "0.4.14"
solana-sdk = "1.8.6"
solana-client = "1.8.6"
solana-cli-config = "1.8.6"
solana-clap-utils = "1.8.6"
solana-banks-client = "1.8.6"
qrcode = "0.11.1"
image = "0.22.0"
home = "0.5.3"
yaml-rust = "0.4.5"
borsh = "0.9.1"
thiserror = "1.0.30"
sol-did = { git = "https://github.com/identity-com/sol-did", rev = "b227cec59795ae6bf23ef987f7ce3a6ea6b6108c", features = ["no-entrypoint"] }
solana_generator = { git = "https://github.com/identity-com/solana_generator", rev = "e8ce32472f667363cd64309c7c32a8b00b897f6c" }
bitflags = "1.3.2"
zeroize = "=1.3.0"
